Release Notes - fae - Version v0.0.1.alpha

** New Feature

    . lcache(local cache shared among processes)
    . memcache backend
    . dlog(distributed log)
    . query server version info through REST api
    . auto discover peers like ES via multicast
    . app level exception added for memcache miss
    . golang servant client so that we can chain the call to distributed servers

** Improvement

    . source code was greatly refactored and better organized
    . request context added, so we can do auditting
    . recyleable mongodb pooling 

** Bug

    . 


** Todo

    . becon 
    . graceful degrade
    . memcache/mongodb/dlog backend
      auto sharding
      stats sampling logging
    . self monitoring and peers
    . extend thrift to be able to trace request origin by extending TServerSocket

----